[package]
name = "tp-xion-reward-contract"
version = "0.1.0"
edition = "2021"
description = "CosmWasm smart contract for Thrive Protocol's XION deployment"
license = "MIT"
repository = "https://github.com/your-repo-link/tp-xion-reward-contract"

[lib]
crate-type = ["cdylib"]
path = "./test/lib.rs"

[dependencies]
cosmwasm-std = "1.0.0"
cosmwasm-storage = "1.0.0"
cosmwasm-schema = "1.0.0"
serde = { version = "1.0", features = ["derive"] }
cw-storage-plus = "1.0.0"

[dev-dependencies]
cosmwasm-schema = "1.0.0"
cosmwasm-std = "1.0.0"
cosmwasm-vm = "1.0.0"
schemars = "0.8.0"
serde_json = "1.0"

[features]
default = []
